corrected header bug where about me was clipping under the header, set header position to static

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -440,7 +440,8 @@ footer {
         grid-template-columns: repeat(3, minmax(5em, 1fr));
     }
     .page-header {
-        position: absolute;
+        position: static;
+        
     }
     
 }
